--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/text.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    
+    <link rel="stylesheet" href="css/font-awesome.css">
 
     <title>Mustave | Index</title>
 
@@ -20,7 +20,7 @@
 <body id="grad">
 
     <div class="col-12 col-lg-12 col-sm-12 d-flex justify-content-center"><img src="images/mustavelogo.png" id="logo"></img></div>
-    <div class="logoname">Mustave</div><p>A fine selection of music</p>
+    <div class="logoname">Mustave</div><p class="slogan">A fine selection of music</p><img class="arrow" src="images/arrow.png"></img>
     <div class="container">
         <div class="row">
         <!-- begin box 1-->
@@ -67,7 +67,7 @@
                                     <li>Voyager</li>
                                     <li>Veridis Quo</li>
                                     <li>Short Circuit</li>
-                                    <li>Too Long></li>
+                                    <li>Too Long</li>
                                     <li>Face To Face</li>
                                 </ol>
                                 </div>
@@ -188,9 +188,11 @@
 </div>
         <!-- einde box 3-->
 <footer>
-     <i class="fa fa-facebook" aria-hidden="true"></i>
-     <i class="fa fa-twitter" aria-hidden="true"></i>
-     <i class="fa fa-google-plus" aria-hidden="true"></i>     
+    <img src="images/mustavelogo.png" id="logofooter"></img>
+    <i class="fa fa-facebook" aria-hidden="true"></i>
+    <i class="fa fa-twitter" aria-hidden="true"></i>
+    <i class="fa fa-google-plus" aria-hidden="true"></i>
+    <p class="slogan">© Mustave 2017</p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
